pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError8.pkl
res: Mapping<String, String> = new {
  ...Map("foo", 1)
}
